--- a/defense/main.bib
+++ b/defense/main.bib
@@ -33,3 +33,40 @@
 	year={1999},
 	publisher={IEEE}
 }
+
+% SPFS
+@inproceedings{Devriendt12,
+	author    = {Jo Devriendt and
+	Bart Bogaerts and
+	Broes de Cat and
+	Marc Denecker and
+	Christopher Mears},
+	title     = {Symmetry Propagation: Improved Dynamic Symmetry Breaking in {SAT}},
+	booktitle = {{IEEE} 24th International Conference on Tools with Artificial Intelligence,
+	{ICTAI} 2012, Athens, Greece, November 7-9, 2012},
+	pages     = {49--56},
+	year      = {2012}
+	
+}
+
+% SLS
+@inproceedings{benhamou2010enhancing,
+	title={Enhancing clause learning by symmetry in SAT solvers},
+	author={Benhamou, Belaid and Nabhani, Tarek and Ostrowski, Richard and Saidi, Mohamed Reda},
+	booktitle={2010 22nd IEEE International Conference on Tools with Artificial Intelligence},
+	volume={1},
+	pages={329--335},
+	year={2010},
+	organization={IEEE}
+}
+
+
+% SEL
+@inproceedings{devriendt2017symmetric,
+	title={Symmetric explanation learning: Effective dynamic symmetry handling for SAT},
+	author={Devriendt, Jo and Bogaerts, Bart and Bruynooghe, Maurice},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={83--100},
+	year={2017},
+	organization={Springer}
+}
