--- a/defense/main.bib
+++ b/defense/main.bib
@@ -70,3 +70,12 @@
 	year={2017},
 	organization={Springer}
 }
+
+@inproceedings{sabharwal2005symchaff,
+	title={SymChaff: A structure-aware satisfiability solver},
+	author={Sabharwal, Ashish},
+	booktitle={AAAI},
+	volume={5},
+	pages={467--474},
+	year={2005}
+}
